--- a/Sinnanda/src/main/resources/application.properties
+++ b/Sinnanda/src/main/resources/application.properties
@@ -2,3 +2,14 @@
 #web set
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+
+# DB config
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.url=jdbc:mariadb://localhost:3306/springb
+spring.datasource.url=jdbc:mariadb://localhost:3306/b2
+spring.datasource.username=root
+spring.datasource.password=java1004
+
+# server config
+server.port=80
+server.servlet.context-path=/
