[이원희]프로퍼티스 오타 수정

--- a/Sinnanda/src/main/resources/application.properties
+++ b/Sinnanda/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 debug=true
 logging.level.com.b2.Sinnanda=trace
 logging.level.com.b2.Sinnanda.controller=trace
-logging.level.com.b2.Sinnanda.mapper==trace
-logging.level.com.b2.Sinnanda.service==trace
-logging.level.com.b2.Sinnanda.vo==trace
+logging.level.com.b2.Sinnanda.mapper=trace
+logging.level.com.b2.Sinnanda.service=trace
+logging.level.com.b2.Sinnanda.vo=trace
 #web set
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
