--- a/Sinnanda/src/main/resources/application.properties
+++ b/Sinnanda/src/main/resources/application.properties
@@ -4,6 +4,7 @@ logging.level.com.b2.Sinnanda.controller=trace
 logging.level.com.b2.Sinnanda.mapper=trace
 logging.level.com.b2.Sinnanda.service=trace
 logging.level.com.b2.Sinnanda.vo=trace
+logging.level.com.b2.Sinnanda.filter=trace
 #web set
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
