--- a/Sinnanda/src/main/resources/application.properties
+++ b/Sinnanda/src/main/resources/application.properties
@@ -19,3 +19,11 @@ spring.datasource.password=java1004
 # server config
 server.port=80
 server.servlet.context-path=/
+
+# mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hymnk2518@gmail.com
+spring.mail.password=mllpbbvrfublbswl
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.auth=true
