--- a/Sinnanda/src/main/resources/application.properties
+++ b/Sinnanda/src/main/resources/application.properties
@@ -12,12 +12,12 @@ spring.mvc.view.suffix=.jsp
 # DB config
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #spring.datasource.url=jdbc:mariadb://localhost:3306/springb
-spring.datasource.url=jdbc:mariadb://localhost:3306/b2
+spring.datasource.url=jdbc:mariadb://localhost:3307/b2
 spring.datasource.username=root
-spring.datasource.password=java1004
+spring.datasource.password=wkqk1004
 
 # server config
-server.port=80
+server.port=8000
 server.servlet.context-path=/
 
 # mail
