[이원희]프로퍼티스 db 비밀번호 수정

--- a/Sinnanda/src/main/resources/application.properties
+++ b/Sinnanda/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #spring.datasource.url=jdbc:mariadb://localhost:3306/springb
 spring.datasource.url=jdbc:mariadb://localhost:3306/b2
 spring.datasource.username=root
-spring.datasource.password=wkqk1004
+spring.datasource.password=java1004
 
 # server config
 server.port=80
