--- a/Sinnanda/src/main/resources/application.properties
+++ b/Sinnanda/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.mvc.view.suffix=.jsp
 # DB config
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #spring.datasource.url=jdbc:mariadb://localhost:3306/springb
-spring.datasource.url=jdbc:mariadb://localhost:3306/b2
+spring.datasource.url=jdbc:mariadb://3.34.145.56:3306/b2
 spring.datasource.username=root
 spring.datasource.password=java1004
 
