--- a/Sinnanda/pom.xml
+++ b/Sinnanda/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.b2</groupId>
 	<artifactId>Sinnanda</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>Sinnanda</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
