--- a/Sinnanda/src/main/resources/application.properties
+++ b/Sinnanda/src/main/resources/application.properties
@@ -16,9 +16,7 @@ spring.datasource.url=jdbc:mariadb://3.34.145.56:3306/b2
 spring.datasource.username=root
 spring.datasource.password=java1004
 
-# server config
 server.port=80
-server.servlet.context-path=/
 
 # mail
 spring.mail.host=smtp.gmail.com
@@ -27,3 +25,6 @@ spring.mail.username=hymnk2518@gmail.com
 spring.mail.password=mllpbbvrfublbswl
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.auth=true
+
+#filter set
+spring.mvc.hiddenmethod.filter.enabled=true
